Updates plugin description.

--- a/addons/maaacks_input_remapping/plugin.cfg
+++ b/addons/maaacks_input_remapping/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Maaack's Input Remapping"
-description="Template with an input remapping menu and persistent settings.
+description="Plugin for input remapping and persistent settings.
 
 Created in collaboration with members of the Godot Wild Jam community."
 author="Marek Belski"
